connectivity-exporter/connectivity-exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connectivity-exporter
  namespace: connectivity-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: connectivity-exporter
  template:
    metadata:
      labels:
        app: connectivity-exporter
    spec:
      containers:
      - name: exporter
        image: harbor.andreybondarenko.com/library/connectivity-exporter:latest
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: config-volume
          mountPath: /config
          readOnly: true
        resources:
          requests:
            cpu: "10m"
            memory: "100Mi"
          limits:
            memory: "100Mi"
      volumes:
      - name: config-volume
        configMap:
          name: connectivity-exporter-config
