connectivity-exporter/network-policy-connectivity-exporter-allow-egress-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: connectivity-exporter-allow-egress-dns
  namespace: connectivity-exporter
spec:
  podSelector:
    matchLabels:
      app: connectivity-exporter
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
