connectivity-exporter/network-policy-connectivity-exporter-allow-ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: connectivity-exporter-allow-ingress-prometheus
  namespace: connectivity-exporter
spec:
  podSelector:
    matchLabels:
      app: connectivity-exporter
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9090
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: connectivity-exporter
      ports:
        - protocol: TCP
          port: 9090
